refactored start and end date handling to autopopulate end of range month in text.

--- a/src/pages/compare-towns.html
+++ b/src/pages/compare-towns.html
@@ -17,7 +17,8 @@
                 <b>Then</b>, select towns to compare against. You can select up to four comparison towns.
             </p>
             <p>
-                <b>Lastly</b>, select a Time Period, Date Range, and one or more Business Entity Type(s).
+                <b>Lastly</b>, select a Time Period, Date Range, and one or more Business Entity Type(s). Data is available
+                from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}.
             </p>
             <p>
                 Addresses of the business represent the current town of the business and not necessarily the town where
