--- a/src/pages/formations-over-time.html
+++ b/src/pages/formations-over-time.html
@@ -11,7 +11,8 @@
             <p>
                 You can view business entity formations:
             <ul>
-                <li>Over a chosen time period, from 1980 to 2016</li>
+                <li>Over a chosen time period, from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear
+                    }}</li>
                 <li>by Counties, Towns, or Councils of Government</li>
                 <li>by Year, Quarter, or by Month</li>
                 <li>For one or more selected business entity type(s)</li>
