--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -5,7 +5,7 @@
             <h1>Exploring Business Formation Patterns in Connecticut</h1>
             <p>In partnership with the <a class="sots-link" href="http://www.sots.ct.gov/sots/site/default.asp">Connecticut Secretary of the
                 State</a>, The Connecticut Data Collaborative is excited to present business formation
-                data from {{ startYear }} to {{ endYear }}. This is the first time this data has been made open and
+                data from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}. This is the first time this data has been made open and
                 accessible.</p>
             <p>Here you will find two ways to explore the data: Visualize <a class="sots-link" href="/#/formations-over-time">formations
               over time</a> or <a class="sots-link" href="/#/compare-towns">compare a subset of towns</a>. You can also search for businesses
@@ -25,9 +25,8 @@
                     <a href="/#/formations-over-time">
                         <h3>Formations over time</h3>
                     </a>
-                    <p>Explore formation patterns by <b>county</b> or <b>town</b>, from <b>{{ startYear }}-{{ endYear
-                        }}</b> by <b>year, quarter or month</b>, and by <b>business type</b>. Visualize the data on a
-                        map or in a bar chart</p>
+                    <p>Explore formation patterns by <b>county</b> or <b>town</b> by <b>year, quarter or month</b>, and by <b>business type</b>. Visualize the data on a
+                        map or in a bar chart.
                 </div>
             </div>
         </div>
