--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -1,90 +1,85 @@
 <div class="container-fluid main-internal">
     <div class="row">
-          <div class="col-sm-12">
-            <img class="sots-logo" src="/images/sots-seal.png" />
-            <h1>Exploring Business Formation Patterns in Connecticut</h1>
-            <p>In partnership with the <a class="sots-link" href="http://www.sots.ct.gov/sots/site/default.asp">Connecticut Secretary of the
-                State</a>, The Connecticut Data Collaborative is excited to present business formation
-                data from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}. This is the first time this data has been made open and
-                accessible.</p>
-            <p>Here you will find two ways to explore the data: Visualize <a class="sots-link" href="/#/formations-over-time">formations
-              over time</a> or <a class="sots-link" href="/#/compare-towns">compare a subset of towns</a>. You can also search for businesses
-              on our dedicated <a class="sots-link" href="http://searchctbusiness.ctdata.org">search portal</a>.
-        </div>
+
+        <div class="col-sm-12">
+          <img class="sots-logo" src="/images/sots-seal.png" />
+
+          <h1>Exploring Business Formation Patterns in Connecticut</h1>
+
+          <p>
+            In partnership with the <a class="sots-link" href="http://www.sots.ct.gov/sots/site/default.asp">Connecticut Secretary of the
+              State</a>, The Connecticut Data Collaborative is excited to present business formation
+              data from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}. This is the first time this data has been made open and
+              accessible.
+          </p>
+
+          <p>
+            Here you will find three ways to explore the data: Visualize <a class="sots-link" href="/#/formations-over-time">formations
+            over time</a>, <a class="sots-link" href="/#/compare-towns">compare a subset of towns</a>, or view monthly
+            <a class="sots-link" href="/#/starts-and-stops">starts and stops</a>.
+            You can also search for businesses on our dedicated <a class="sots-link" href="http://searchctbusiness.ctdata.org">search portal</a>.
+          </p>
+      </div>
+
     </div>
+
+
     <div class="row">
-        <div class="path col-lg-6 col-md-12 col-sm-12 col-xs-12">
-            <div>
-                <div class="bluebar"></div>
-                <a href="/#/formations-over-time">
-                    <div class="col-sm-4 col-xs-4 path-image">
-                        <img src="/images/formations-over-time.png"></img>
-                    </div>
-                </a>
-                <div class="col-sm-8 path-info">
-                    <a href="/#/formations-over-time">
-                        <h3>Formations over time</h3>
-                    </a>
-                    <p>Explore formation patterns by <b>county</b> or <b>town</b> by <b>year, quarter or month</b>, and by <b>business type</b>. Visualize the data on a
-                        map or in a bar chart.
-                </div>
-            </div>
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="/#/formations-over-time">
+              <img src="/images/formations-over-time.png"></img>
+              <h3>Formations over time</h3>
+            </a>
+
+            <p>
+              Explore formation patterns by <b>county</b> or <b>town</b> by <b>year,
+              quarter or month</b>, and by <b>business type</b>.
+              Visualize the data on a map or in a bar chart.
+            </p>
+          </div>
         </div>
-        <div class="path col-lg-6 col-md-12 col-sm-12 col-xs-12">
-            <div>
-                <div class="bluebar"></div>
-                <a href="/#/compare-towns">
-                    <div class="col-sm-4 col-xs-4 path-image">
-                        <img src="/images/compare-towns.png"></img>
-                    </div>
-                </a>
-                <div class="col-sm-8 path-info">
-                    <a href="/#/compare-towns">
-                        <h3>Compare Towns</h3>
-                    </a>
-                    <p>Interested in a particular town's data? Or have a group of towns you want to explore? This tool
-                        allows you to compare data for a particular town against 4 additional towns of your
-                        choosing.</p>
-                </div>
-            </div>
+
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="/#/compare-towns">
+              <img src="/images/compare-towns.png"></img>
+              <h3>Compare Towns</h3>
+            </a>
+
+            <p>
+              Interested in a particular town's data? Or have a group of towns you want to explore? This tool
+                  allows you to compare data for a particular town against 4 additional towns of your
+                  choosing.
+            </p>
+          </div>
         </div>
-        <!-- <div class="path col-lg-4 col-md-12 col-sm-12 col-xs-12">
-            <div>
-                <div class="bluebar"></div>
-                <a href="/#/compare-towns">
-                    <div class="col-sm-4 col-xs-4 path-image">
-                        <img src="/images/search.png"></img>
-                    </div>
-                </a>
-                <div class="col-sm-8 path-info">
-                    <a href="http://searchctbusiness.ctdata.org">
-                        <h3>Search the Data</h3>
-                    </a>
-                    <p>Search for business records by name and location.</p>
-                </div>
-            </div>
-        </div> -->
-        <!-- <div class="path col-lg-6 col-md-12 col-sm-12 col-xs-12">
-            <div>
-                <div class="bluebar"></div>
-                <a href="http://ctdata.org/tag/sots">
-                    <div class="col-sm-4 col-xs-4 path-image">
-                        <img src="/images/data-stories.png"></img>
-                    </div>
-                </a>
-                <div class="col-sm-8 path-info">
-                    <a href="http://ctdata.org/tag/sots">
-                        <h3>Data Stories</h3>
-                    </a>
-                    <p>See what interesting things CTData has to say about this data.</p>
-                </div>
-            </div>
-        </div> -->
-    </div>
-    <!-- <div class="row">
-        <div class="center-text col-xs-12">
-            <h5>In partnership with the Connecticut Secretary of the State</h5>
-            <img style="height:8rem;width:auto;" src="/images/sots-seal.png" />
+
+      </div>
+
+
+
+      <div class="row">
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="/#/starts-and-stops">
+              <img src="/images/starts-and-stops.png"></img>
+              <h3>Starts & Stops</h3>
+            </a>
+
+            <p>
+              General overview of the number of business entities forming/registering
+              and dissolving/withdrawing in a given month.
+            </p>
+          </div>
         </div>
-    </div> -->
+
+      </div>
+
 </div>
