Add minor style modifications

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -7,7 +7,7 @@
           <h1>Exploring Business Formation Patterns in Connecticut</h1>
 
           <p>
-            In partnership with the <a class="sots-link" href="http://www.sots.ct.gov/sots/site/default.asp">Connecticut Secretary of the
+            In partnership with the <a class="sots-link" href="https://portal.ct.gov/sots">Connecticut Secretary of the 
               State</a>, The Connecticut Data Collaborative is excited to present business formation
               data from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}. This is the first time this data has been made open and
               accessible.
