--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
         <div class="hero" ng-if="isRoot">
             <div class="jumbo-image">
                 <div class="module mid">
-                    <h1 class="text">Connecticut Businesses</h1>
+                    <h1 class="text">Connecticut Business Formations</h1>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <div>
                         <p>
                           Connecticut Data Collaborative is a Project of InformCT, Inc. <br>
-                          Copyright &copy; 2015—2018 Connecticut Data Collaborative
+                          Copyright &copy; 2015—2019 Connecticut Data Collaborative
                         </p>
                     </div>
                 </div>
