Bulk upload of minor improvements in the past 6 months

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -7,7 +7,7 @@
           <h1>Exploring Business Formation Patterns in Connecticut</h1>
 
           <p>
-            In partnership with the <a class="sots-link" href="https://portal.ct.gov/sots">Connecticut Secretary of the 
+            In partnership with the <a class="sots-link" href="https://portal.ct.gov/sots">Connecticut Secretary of the
               State</a>, The Connecticut Data Collaborative is excited to present business formation
               data from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}. This is the first time this data has been made open and
               accessible.
@@ -29,8 +29,23 @@
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
 
+            <a href="http://searchctbusiness.ctdata.org">
+              <img src="/images/searchctbusiness.png">
+              <h3>Search Business</h3>
+            </a>
+
+            <p>
+              Full-text searching, exploration and downloading of business registration records.
+              Search for businesses by name, address, city, business id, filing number, principal name or agent name.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
             <a href="/#/formations-over-time">
-              <img src="/images/formations-over-time.png"></img>
+              <img src="/images/formations-over-time.png">
               <h3>Formations over time</h3>
             </a>
 
@@ -42,26 +57,7 @@
           </div>
         </div>
 
-
-        <div class="col-lg-6 col-xs-12">
-          <div class="bluebar">
-
-            <a href="/#/compare-towns">
-              <img src="/images/compare-towns.png"></img>
-              <h3>Compare Towns</h3>
-            </a>
-
-            <p>
-              Interested in a particular town's data? Or have a group of towns you want to explore? This tool
-                  allows you to compare data for a particular town against 4 additional towns of your
-                  choosing.
-            </p>
-          </div>
-        </div>
-
       </div>
-
-
 
       <div class="row">
 
@@ -69,13 +65,29 @@
           <div class="bluebar">
 
             <a href="/#/starts-and-stops">
-              <img src="/images/starts-and-stops.png"></img>
+              <img src="/images/starts-and-stops.png">
               <h3>Starts & Stops</h3>
             </a>
 
             <p>
               General overview of the number of business entities forming/registering
               and dissolving/withdrawing in a given month.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="/#/compare-towns">
+              <img src="/images/compare-towns.png">
+              <h3>Compare Towns</h3>
+            </a>
+
+            <p>
+              Interested in a particular town's data? Or have a group of towns you want to explore? This tool
+                  allows you to compare data for a particular town against 4 additional towns of your
+                  choosing.
             </p>
           </div>
         </div>
