--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Business Formation Patterns &mdash; CTData.org</title>
-        <link type="image/x-icon" href="/src/static/images/favicon.ico" rel="shortcut icon">
+        <link type="image/x-icon" href="images/favicon.png" rel="shortcut icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -56,7 +56,7 @@
             <!-- /.overlay -->
             <div class="navbar-brand .pull-xs-left">
                 <div class="logo">
-                    <img src="/images/logo.svg">
+                    <img src="/images/ctdata-logo-transparent.png">
                 </div>
             </div>
             <div class="navbar-toggleable-sm collapse" id="collapseableNavbar">
