Add links to Business Map and Google Drive folder

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -44,15 +44,13 @@
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
 
-            <a href="/#/formations-over-time">
-              <img src="/images/formations-over-time.png">
-              <h3>Formations over time</h3>
+            <a href="https://drive.google.com/drive/folders/1IRg7eNuHNc7wmLkbpk__mNWc-MNtovLd">
+              <img src="/images/download-by-month.png">
+              <h3>Download Data by Month</h3>
             </a>
 
             <p>
-              Explore formation patterns by <b>county</b> or <b>town</b> by <b>year,
-              quarter or month</b>, and by <b>business type</b>.
-              Visualize the data on a map or in a bar chart.
+              Download recent SOTS business registration activity by month as .csv files.
             </p>
           </div>
         </div>
@@ -60,6 +58,23 @@
       </div>
 
       <div class="row">
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="http://ctbusinessmap.ctdata.org">
+              <img src="/images/ctbusinessmap.png">
+              <h3>Business by Sector Map</h3>
+            </a>
+
+            <p>
+              By matching business entities from several sources, CTData was able
+              to create a list of about 100,000 business with an industry code (NAICS).
+              These businesses are mapped according by Sector (2 digits) and Subsector (3 digits).
+              The purpose of this map is to allow anyone to explore business cluster patterns.
+            </p>
+          </div>
+        </div>
 
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
@@ -76,6 +91,11 @@
           </div>
         </div>
 
+      </div>
+
+
+      <div class="row">
+
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
 
@@ -91,6 +111,23 @@
             </p>
           </div>
         </div>
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="/#/formations-over-time">
+              <img src="/images/formations-over-time.png">
+              <h3>Formations Over Time</h3>
+            </a>
+
+            <p>
+              Explore formation patterns by <b>county</b> or <b>town</b> by <b>year,
+              quarter or month</b>, and by <b>business type</b>.
+              Visualize the data on a map or in a bar chart.
+            </p>
+          </div>
+        </div>
+
 
       </div>
 
