Change google drive direct link to bit.ly

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -44,7 +44,7 @@
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
 
-            <a href="https://drive.google.com/drive/folders/1IRg7eNuHNc7wmLkbpk__mNWc-MNtovLd">
+            <a href="http://bit.ly/ctdata-sots-monthly">
               <img src="/images/download-by-month.png">
               <h3>Download Data by Month</h3>
             </a>
