Minor text changes on landing page

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
         <div class="hero" ng-if="isRoot">
             <div class="jumbo-image">
                 <div class="module mid">
-                    <h1 class="text">Connecticut Business Formations</h1>
+                    <h1 class="text">Connecticut Business Data</h1>
                 </div>
             </div>
         </div>
