--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -4,13 +4,15 @@
         <div class="col-sm-12">
           <img class="sots-logo" src="/images/sots-seal.png" />
 
-          <h1>Exploring Business Formation Patterns in Connecticut</h1>
+          <h1>Exploring Business Registration Data</h1>
 
           <p>
             In partnership with the <a class="sots-link" href="https://portal.ct.gov/sots">Connecticut Secretary of the
-              State</a>, The Connecticut Data Collaborative is excited to present business formation
-              data from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}. This is the first time this data has been made open and
-              accessible.
+              State</a>, The Connecticut Data Collaborative is excited to present multiple
+              tools to explore business registration data
+              from {{ startMonth }} {{ startYear }} to {{ endMonth }} {{ endYear }}.
+              This is the first time this data has been made open and accessible.
+              Here you will find six ways to explore the data.
           </p>
 
           <p>
