--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -89,8 +89,23 @@
 
       </div>
 
-
       <div class="row">
+
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="https://naics.ctdata.org/" target="_blank">
+              <img src="/images/naics-code-lookup.png">
+              <h3>NAICS Code Lookup</h3>
+            </a>
+
+            <p>
+              Use the search tool to find a NAICS code that best describes your business activity
+              among 1,057 available NAICS codes.
+            </p>
+          </div>
+        </div>
+
 
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
@@ -108,6 +123,11 @@
           </div>
         </div>
 
+      </div>
+
+
+      <div class="row">
+
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
 
@@ -124,7 +144,7 @@
           </div>
         </div>
 
-
       </div>
+
 
 </div>
