Add new registration Tableau dashboard to main page

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -65,9 +65,9 @@
 
             <p>
               By matching business entities from several sources, CTData was able
-              to create a list of about 100,000 business with an industry code (NAICS).
-              These businesses are mapped according by Sector (2 digits) and Subsector (3 digits).
-              The purpose of this map is to allow anyone to explore business cluster patterns.
+              to create a list of about 100,000 businesses with an industry code (NAICS).
+              These businesses are mapped by Sector (2 digits) and Subsector (3 digits).
+              The purpose of this map is to show business cluster patterns.
             </p>
           </div>
         </div>
@@ -106,6 +106,26 @@
           </div>
         </div>
 
+        <div class="col-lg-6 col-xs-12">
+          <div class="bluebar">
+
+            <a href="https://public.tableau.com/profile/connecticut.state.data.center#!/vizhome/ConnecticutNewBusinessRegistrations/SOTS" target="_blank">
+              <img src="/images/new-business-registrations-tableau.png">
+              <h3>New Business Registrations</h3>
+            </a>
+
+            <p>
+              This dashboard provides business registration counts in Connecticut by industry
+              (NAICS). You can see registrations over time for Connecticut and individual towns.
+            </p>
+          </div>
+        </div>
+        
+
+      </div>
+
+
+      <div class="row">
 
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
@@ -122,11 +142,6 @@
             </p>
           </div>
         </div>
-
-      </div>
-
-
-      <div class="row">
 
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
