Copyright 2020->21; fix monthly regs GDrive link

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -40,7 +40,7 @@
         <div class="col-lg-6 col-xs-12">
           <div class="bluebar">
 
-            <a href="http://bit.ly/ctdata-sots-monthly">
+            <a href="https://www.ctdata.org/sots-monthly-registrations">
               <img src="/images/download-by-month.png">
               <h3>Download Data by Month</h3>
             </a>
